--- a/src/pages/Landing/styles.css
+++ b/src/pages/Landing/styles.css
@@ -76,8 +76,12 @@
     background:var(--color-secundary-dark);
 }
 
+.buttons-container a img{
+    margin-right: 2rem; 
+}
+
 .total-connections {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
 
     display: flex;
     align-items: center;
@@ -88,3 +92,51 @@
     margin-left: 0.8rem;
 }
 
+@media (min-width: 1100px){
+    #page-landing-content {
+        max-width: 1100px;
+
+        display: grid;
+        grid-template-rows: 350px 1fr;
+        grid-auto-columns: 2fr 1fr 1fr;
+        grid-template-areas: 
+            "logo hero hero"
+            "buttons buttons total"
+            ;
+    }
+
+    .logo-container{
+        grid-area: logo;
+        align-self: center;
+        margin: 0;
+        text-align: left;
+    }
+    .logo-container img{
+        height: 100%;
+    }
+    
+    .logo-container h2{
+        text-align: left;
+        font-size: 3.2rem;
+    }
+
+    .hero-image{
+        grid-area: hero;
+        justify-self: end;
+    }
+
+    .buttons-container{
+        grid-area: buttons;
+        justify-content: flex-start;
+    }
+
+    .buttons-container a{
+        font-size: 2.4rem;
+    }
+
+    .total-connections{
+        grid-area: total;
+        justify-self: end;
+        font-size: 1.4rem;  
+    }
+}
