--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -32,7 +32,7 @@ html, body, #root {
 }
 
 body {
-    background: var (var(--color-background));
+    background: var var(--color-background);
 }
 
 #root {
